--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
   <body>
-    <a href="1.html">Задание - 1</a>
-    <a href="2.html">Задание - 2</a>
-    <a href="3.html">Задание - 3</a>
+    <div style="display: flex; flex-direction: column;">
+      <a href="1.html">Задание - 1</a>
+      <a href="2.html">Задание - 2</a>
+      <a href="3.html">Задание - 3</a>
+    </div>
   </body>
 </html>
